--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
     <div class="container">
         <div class="row align-item-center text-center">
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -175,7 +175,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -191,7 +191,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -207,7 +207,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -223,7 +223,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -239,7 +239,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -255,7 +255,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -271,7 +271,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -287,7 +287,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -303,7 +303,7 @@
                     </a>
                 </div>
             </div> 
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -319,7 +319,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -335,7 +335,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -351,7 +351,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -367,7 +367,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -383,7 +383,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
