--- a/for_organization.html
+++ b/for_organization.html
@@ -9,9 +9,12 @@
     <title>Для организаций</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
+    <link rel="stylesheet" href="css/style_for_all.css">
     <link rel="stylesheet" href="css/style_header.css">
-    <link rel="stylesheet" href="css/style_first_block.css">
+    <link rel="stylesheet" href="css/style_first_block_with_photo_and_send_form.css">
+    <link rel="stylesheet" href="css/style_enter_to_organization.css">
     <link rel="stylesheet" href="css/style_content_on_main_page.css">
+    <link rel="stylesheet" href="css/style_send_white_form.css">
     <link rel="stylesheet" href="css/style_send_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_pest-control.css">
@@ -97,16 +100,16 @@
                         <h1 class="first_block__main_text">Для организаций</h1>
                         <ol class="first_block__list_with_text">
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Оформление любых санитарных документов - оперативно и официально</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Документальное подтверждение работ - оперативно и официально</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Санитарные паспорта на транспорт</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Обеззараживание и дезинфекция транспортного средства и оформление соответствующих документов</span>
                             </li>
                             <li>
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Программа производственного контроля</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Журнал учета и расходования дезсредств</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Экологическая защита в сельско-хозяйственном и агро бизнесе</span>
                             </li>
                             <li>
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Гарантируем конфиденциальность</span>
@@ -127,7 +130,174 @@
             </div>
         </div>
     </div>
+    <div class="container nadejno_container">
+        <div class="nadejno_content">
+            <div class="row text-center">
+                <div class="col-lg-4 nadejno_content__block">
+                    <p class="nadejno_content__icon">&#10003;</p>
+                    <p class="nadejno_content__main_text">Надежно</p>
+                    <p class="nadejno_content__text">Даем гарантию на все работы</p>
+                </div>
+                <div class="col-lg-4 nadejno_content__block">
+                    <p class="nadejno_content__icon">&#10003;</p>
+                    <p class="nadejno_content__main_text">Безопастно</p>
+                    <p class="nadejno_content__text">Не наносим вреда вашему имуществу, используем только сертифицированные средства</p>
+                </div>
+                <div class="col-lg-4 nadejno_content__block">
+                    <p class="nadejno_content__icon">&#10003;</p>
+                    <p class="nadejno_content__main_text">Удобно</p>
+                    <p class="nadejno_content__text">Работаем 24 часа в сутки, 7 дней в неделю, приезжаем в удобное для вас время</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- КОНЕЦ -->
+
+    <!-- Вступление -->
+    <!-- НАЧАЛО -->
+    <div class="container enter_container">
+        <div class="enter_content">
+            <p class="enter__main_text ml-5">
+                ООО «Дезсан» проводит услуги <a href="" class="enter__link">дезинфекции</a>, <a href="" class="enter__link">дератизации</a>, <a href="" class="enter__link">дезинсекции</a>, <a href="" class="enter__link">дезодорации</a> и <a href="" class="enter__link">фумигации</a> юридическим лицам. Обратившись к нам, вы можете быть уверены в решении своей проблемы, исключить риск порчи имущества и причинения вреда здоровью сотрудников. Мы проводим очаговую и профилактическую обработку, а с предприятиями, где повышен риск проникновения вредителей (например, продуктовые склады), работаем на постоянной основе.
+            </p>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- ФОрма на прозрачном фоне -->
+    <!-- НАЧАЛО -->
+    <div class="container container_of_the_white_form">
+        <h4>Заполните форму и получите персональное предложение</h4>
+        <div class="row g-4">
+            <div class="col-lg-3 col-md-4">
+                <input type="text" class="ml-3 form-control container_of_the_white_form__input" placeholder="Имя" aria-label="First name" required>
+            </div>
+            <div class="col-lg-3 col-md-4 m-auto mt-4">
+                <input type="number" class="form-control container_of_the_white_form__input" placeholder="Номер телефона для связи" aria-label="Last name" required>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <input type="text" class=" form-control container_of_the_white_form__input" placeholder="Почта" aria-label="Last name" required>
+            </div>
+        </div>
+        <div class="row">
+            <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
+        </div>
+    </div>
+    <div class="container">
+        <div class="hr"></div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- Главное содержание страницы -->
+    <!-- НАЧАЛО -->
+    <div class="container content-on-main-page">
+        <h1>Специализация <strong><span>ДЕЗ</span>САН</strong></h1>
+        <p class="description"><br> Мы - профессионалы с многолетним опытом работы в области дезинсекции, дератизации, десерпентации, дезинфекции и фумигации</p>
+    </div>
+    <div class="container">
+        <div class="row align-item-center text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/dezinfekcija.png" style="position: relative; z-index: 2;" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">дезинфекция</h3>
+                            <p class="one_card__content">Имеют сильно сплющенное сегментированное тельце. Его форма варьируется от округлой до веретенообразной</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/deratacija.png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">дератизация</h3>
+                            <p class="one_card__content">Клещи становятся особенно активными в апреле, а заканчивается сезон их активности в сентябре. В длину самцы этих паразитов</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/dezinsekcija.png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">дезинсекция</h3>
+                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/dezodoracija.png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">дезодорация</h3>
+                            <p class="one_card__content">Тараканы - самые известные насекомые-паразиты. Не обладают кровососущей способностью и не повреждают продуктов, но являются</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">десерпентация</h3>
+                            <p class="one_card__content">Тараканы - самые известные насекомые-паразиты. Не обладают кровососущей способностью и не повреждают продуктов, но являются</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">фумигация</h3>
+                            <p class="one_card__content">Имеют сильно сплющенное сегментированное тельце. Его форма варьируется от округлой до веретенообразной</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <!-- КОНЕЦ -->
+
 
     <!-- Форма отправки имя/телефона/почты -->
     <!-- НАЧАЛО -->
