--- a/our_services.html
+++ b/our_services.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/style_main_on_the_page.css">
     <link rel="stylesheet" href="css/style_content_on_main_page.css">
     <link rel="stylesheet" href="css/style_send_form.css">
+    <link rel="stylesheet" href="css/style_send_white_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_footer.css">
 </head>
@@ -84,6 +85,27 @@
 
                 </div>
             </nav>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- ФОрма на прозрачном фоне -->
+    <!-- НАЧАЛО -->
+    <div class="container container_of_the_white_form">
+        <h4>Заполните форму и получите персональное предложение</h4>
+        <div class="row g-4">
+            <div class="col-lg-3 col-md-4">
+                <input type="text" class="ml-3 form-control container_of_the_white_form__input" placeholder="Имя" aria-label="First name" required>
+            </div>
+            <div class="col-lg-3 col-md-4 m-auto mt-4">
+                <input type="number" class="form-control container_of_the_white_form__input" placeholder="Номер телефона для связи" aria-label="Last name" required>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <input type="text" class=" form-control container_of_the_white_form__input" placeholder="Почта" aria-label="Last name" required>
+            </div>
+        </div>
+        <div class="row">
+            <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
         </div>
     </div>
     <!-- КОНЕЦ -->
