--- a/comments.html
+++ b/comments.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
     <link rel="stylesheet" href="css/style_header.css">
+    <link rel="stylesheet" href="css/style_for_all.css">
     <link rel="stylesheet" href="css/style_send_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_footer.css">
@@ -23,11 +24,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 col-sm-12 top_black_block text-center">
-                    <a href="" class="top_menu_link">Наши услуги</a>
-                    <a href="" class="top_menu_link">О нас</a>
-                    <a href="" class="top_menu_link">Отзывы</a>
-                    <a href="" class="top_menu_link">Методы работы</a>
-                    <a href="" class="top_menu_link">Вопрос-ответ</a>
+                    <a href="our_services.html" class="top_menu_link">Наши услуги</a>
+                    <a href="about_us.html" class="top_menu_link">О нас</a>
+                    <a href="comments.html" class="top_menu_link">Отзывы</a>
+                    <a href="methods_work.html" class="top_menu_link">Методы работы</a>
+                    <a href="question-answer.html" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
                     <a href="tel:+380503559950" class="top_menu_link_to">&#128379;</a><span>+380503559950</span>
@@ -36,53 +37,56 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <div class="container-fluid">
+    <div class="container-fluid white_menu">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <div class="container-fluid">
 
-                <a class="navbar-brand" href="#">
-                    <img src="img/logo.jpg" width="60px" height="60px" alt="Логотип сайта">
-                    <span class="navbar-title" style="color:  rgb(255, 109, 0);" >ДЕЗСАН</span>
-                </a>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="img/logo.jpg" width="60px" height="60px" alt="Логотип сайта">
+                        <span class="navbar-title" style="color:  rgb(255, 109, 0);" >ДЕЗСАН</span>
+                    </a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedo" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedo" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-text" href="#">Дезинсекция</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-text" href="#">Дератизация</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-text" href="#">Дезинфекция</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-text" href="#">Десерпентация</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-text" href="#">Фумигация</a>
-                        </li>  
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-text" href="#">Для организаций</a>
-                        </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link nav-link-text" href="#">Акции</a>
-                        </li> -->
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-text" href="#">Контакты</a>
-                        </li>
-                    </ul>
+                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="dezincekciya.html">Дезинсекция</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="deratizaciya.html">Дератизация</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="desinphekciya.html">Дезинфекция</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
+                            </li>  
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
-
-            </div>
-        </nav>
+            </nav>
+        </div>
     </div>
     <!-- КОНЕЦ -->
 
+
+
+
+    
     <!-- Форма отправки имя/телефона/почты -->
     <!-- НАЧАЛО -->
     <div id="send_form" class="container-fluid pb-2">
