--- a/contacts.html
+++ b/contacts.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
 
-    <title>Вопрос-ответ</title>
+    <title>Контакты</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
     <link rel="stylesheet" href="css/style_header.css">
+    <link rel="stylesheet" href="css/style_contacts.css">
     <link rel="stylesheet" href="css/style_for_all.css">
-    <link rel="stylesheet" href="css/style_about_us.css">
     <link rel="stylesheet" href="css/style_send_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_footer.css">
@@ -73,7 +73,7 @@
                                 <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
+                                <a class="nav-link nav-link-text active" href="contacts.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
@@ -84,31 +84,22 @@
     </div>
     <!-- КОНЕЦ -->
 
-    <!-- О нас -->
+    <!-- Контакты -->
     <!-- НАЧАЛО -->
-    <div class="container about_us__container">
-        <div class="about_us__content">
-            <p class="about_us__main_text">О нас</p>
-            <div class="hr"></div>
-            <p class="about_us__text">Мы предлагаем круглосуточные услуги по дезинсекции, дератизации и дезинфекции как физическим, так и юридическим лицам. От соседей пришли клопы или в ресторане срочно нужно уничтожить тараканов? Звоните нам — и мы поможем справиться с проблемой!</p>
-            <p class="about_us__main_text">Эффективно, но безопасно</p>
-            <p class="about_us__text">Мы используем профессиональное оборудование и яды, но знаем, как сделать так, чтобы их применение не навредило здоровью ваших близких, питомцам или мебели. О том, какие методы мы используем в работе, подробнее можно прочитать на странице Методы работы. </p>
-            <p class="about_us__text">Если у вас возникли какие-то вопросы по уничтожению вредителей и подготовке к обработке, вы можете посетить страницу Вопрос-ответ, или связаться со специалистом службы «Дезстанция» по телефону или через форму на сайте. Наши менеджеры дадут рекомендации, подходящие к вашей ситуации, и заранее объяснят, как правильно подготовиться к процедуре, и что делать после нее.  
-                <br>На каждую процедуру действует гарантия.</p>
-            <p class="about_us__main_text">Работа с юридическими лицами </p>
-            <p class="about_us__text">Наша компания предоставляет все соответствующие документы о проведенной обработке, сертификаты на используемые препараты.
-                <br>Рекомендуем заключить  договор на комплексное поквартальное или помесячное обслуживание с плановым осмотром объектов и проведением истребительных/профилактических дезинсекционных/дератизационных/дезинфекционных мероприятий.  </p>
-            <p class="about_us__text">Мы также можем помочь с санитарной обработкой транспорта, с предоставлением подтвержающих документов.</p>
-            <p class="about_us__main_text">С нами удобно </p>
-            <p class="about_us__text">Мы работаем 24 часа в сутки, 7 дней в неделю, чтобы вы могли вызвать специалистов на любое удобное время. Помните, чем быстрее начнете борьбу с вредителями, тем эффективнее будет их уничтожение и меньше возможный ущерб.  </p>
-            <p class="about_us__text">Не во всех случаях возможно добиться результата с одного раза, но мы готовы предложить выгодные решения, которые позволят выиграть в цене, не экономя на качестве. </p>
-            <p class="about_us__text">Если у вас возникли какие либо вопросы, или вы хотите прибегнуть к одной из наших услуг, то напишите нам об этом. 
-                <br>Мы обязательно вам ответим! </p>
-            <p class="about_us__main_text">Реквизиты:</p>
-            <p class="about_us__text">Общество с ограниченной ответственностью «ДЕЗСАН»</p>
-            <p class="about_us__text">код ЕГРПОУ 43469157  </p>
-            <p class="about_us__text">Адрес гл.офис: г.Харьков, проспект Ново-Баварский, д.77 </p>
-            <p class="about_us__text">Или звоните нам прямо сейчас — телефон: +380503559950</p>
+    <div class="container contacts mt-3 mb-5">
+        <div class="contacts_content">
+            <p class="contacts__office">
+                <a class="contacts__main_text">Главный офис:</a> <br> <a class="contacts__text" href="https://maps.google.com/?q=49.94967074759937,36.164730511597185">г.Харьков проспект Ново-Баварский 77 </a> 
+            </p>
+            <p class="contants__number">
+                <a class="contacts__main_text">Номера телефонов:</a> <br>
+                <a class="contacts__text" href="tel:+380503559950">+380503559950</a> <br>
+                <a class="contacts__text" href="tel:+380677696083">+380677696083</a> <br>
+                <a class="contacts__text" href="tel:+380933307707">+380933307707</a>
+            </p>
+            <p class="contants__email">
+                <a class="contacts__main_text">Электронный адрес:</a> <br> <a class="contacts__text"  href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB"> dezsan.kh@gmail.com </a>
+            </p>
         </div>
     </div>
     <!-- КОНЕЦ -->
